--- a/partials/footer.ejs
+++ b/partials/footer.ejs
@@ -1,6 +1,6 @@
 </main>
-<footer>Copyright &copy; Javed M 2024</footer>
 <script defer src="/script.js"></script>
+<footer>&copy; Javed M 2024</footer>
 </body>
 </html>
 
