--- a/partials/header.ejs
+++ b/partials/header.ejs
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="/style.css">
-    <title><%= title %></title>
+    <title>
+        <%= title %>
+    </title>
 </head>
+<nav>
+    <ul class="nav-list">
+        <li><a href="/">Home</a></li>
+        <li><a href="/profile">Profile</a></li>
+        <li><a href="/contact">Contact</a></li>
+
+    </ul>
+    <div class="search-container">
+        <form action="/content-search" class=".search-form">
+            <input type="search" name="q" value="" class="search-bar" placeholder="search ">
+            <button><i class='bx bx-search-alt' id="search-icon"></i></button>
+        </form>
+    </div>
+</nav>
 <body>
-    
+    <main>
