--- a/partials/header.ejs
+++ b/partials/header.ejs
@@ -11,18 +11,14 @@
     </title>
 </head>
 <nav>
+    <h1>JM</h1>
     <ul class="nav-list">
         <li><a href="/">Home</a></li>
-        <li><a href="/profile">Profile</a></li>
+        <li><a href="/profile">About</a></li>
+        <li><a href="/projects">Projects</a></li>
         <li><a href="/contact">Contact</a></li>
 
     </ul>
-    <div class="search-container">
-        <form action="/content-search" class=".search-form">
-            <input type="search" name="q" value="" class="search-bar" placeholder="search ">
-            <button><i class='bx bx-search-alt' id="search-icon"></i></button>
-        </form>
-    </div>
 </nav>
 <body>
     <main>
