--- a/partials/introBody.ejs
+++ b/partials/introBody.ejs
@@ -1,8 +1,14 @@
-<h1>Welcome to my space</h1>
-<h4>ive learnt alot</h4>
-<div>
-    <img src="" alt="photo of coder">
-    <p>My journey into programming</p>
+<h4>Welcome 👋🏾,</h4>
+<p class="intro-body-info">Ive learnt alot && would like to show you <br>
+    my journey into web development
+</p>
+<div class="image-container">
+    <img src="./img/img2.png" alt="photo of coder" width="350px" height="350px">
 </div>
+<ul class="personal-links">
+    <li><a href="https://www.linkedin.com/in/javed-muckett-6907b0a5/" target="_blank"><i class='bx bxl-linkedin-square bx-flashing'></i></a></li>
+    <li><a href="https://github.com/Pybite" target="_blank""><i class='bx bxl-github bx-flashing' ></i></a></li>
+    <li><a href="https://x.com/config_err" target="_blank"><i class='bx bxl-twitter bx-flashing' ></i></a></li>
+</ul>
 
 
