--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,15 @@
 <%- include('../partials/header') %>
     <div class="container">
-       
-    <%- include('../partials/introBody') %>
-       
-       
-       
-       
+        <section id="intro-section">
+            <%- include('../partials/introBody') %>
+        </section>
         <section>
-        <p><a href="/create-blog">Add new</a></p>
+            <p><a href="/create-blog">Add new</a></p>
             <div>
                 <ul>
-                    <li><%= %></li>
+                    <li>
+                        Author
+                    </li>
                     <li>Content</li>
                     <li>Date</li>
                 </ul>
