--- a/public/style.css
+++ b/public/style.css
@@ -1,16 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fontdiner+Swanky&family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Vujahday+Script&family=Yeseva+One&display=swap');
+
 body {
     font-family: "Roboto Condensed", sans-serif;
-    background-image: url('./img/img1.jpeg');
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-color: #190933;
     max-height: max-content;
     color: white;
 
 }
+
+/* start of navigation */
 nav {
     display: flex;
-    justify-content: space-between;
+    padding: 0;
+    gap: 10px;
+    
+}
+nav h1 {
+    font-family: "Fontdiner Swanky", serif;
+    margin-left: 10px;
+    margin-top: 2px;
+    position: relative;
+    border: 1px solid;
+    border-radius: 50px;
+    padding: 8px;
+}
+nav h1:hover {
+    color: gold;
+    transition: all 2s; 
 }
 
 .nav-list {
@@ -22,29 +40,56 @@ nav {
     text-decoration: none;
     padding: 5px;
     border-radius: 12px;
-    color: rgb(10, 10, 10);
+    color: hsl(263, 70%, 62%);
 }
 
 .nav-list li a:hover {
-    background-color: #b9b9ff73;
+    color: hsl(263, 70%, 42%);
 }
-.search-container {
-    margin: 10px 10px;
-}
+/* end of navigation */
 
-.search-bar {
-    width: 100px;
-    border-radius: 15px;
-    height: 20px;
+/* start of the intro body section */
+#intro-section {
+    border-top: .5px solid hsl(263, 70%, 30%);
+    border-bottom: .5px solid hsl(263, 70%, 30%);
+    margin: 10px;
     padding: 10px;
 }
 
-#search-icon {
-    border-radius: 12px;
+#intro-section h4 {
+    position: relative;
+    left: 15%;
+    margin-bottom: 5px;
+}
+
+.intro-body-info {
+    position: relative;
+    left: 15%;
+    font-size: 2.5rem;
+    font-family: "Vujahday Script", cursive;
+    font-weight: 800;
+    margin-top: 0;
+}
+.image-container {
+    position: relative;
+    left: 830px;
+    margin: 10px;
+    padding: 10px;
+}
+
+.personal-links {
+    display: flex;
+    list-style-type: none;
+    gap: 20px;
+    justify-content: center;
+}
+.personal-links li a {
+    color: white;
+    font-size: 3.125rem;
 }
 
 @media screen and (max-width: 600px) {
-    .nav-list, .search-container {
+    .nav-list {
       float: none;
       display: block;
       text-align: left;
@@ -52,13 +97,12 @@ nav {
       margin: 0;
       padding: 14px;
     }
+
+    .image-container {
+        left: 50%;
+    }
   }
 
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
 
 footer {
     text-align: center;
