added about me section + icons/animations

--- a/partials/footer.ejs
+++ b/partials/footer.ejs
@@ -1,6 +1,16 @@
 </main>
-<script defer src="/script.js"></script>
+<div class="credits">
+    <p>Credits:<a href="https://www.flaticon.com/" target="_blank" title="Flaticon"> Icons created by Kiranshastry - Flaticon</a></p>
+    <ul class="personal-links">
+        <li><a href="https://www.linkedin.com/in/javed-muckett-6907b0a5/" target="_blank"><i
+                    class='bx bxl-linkedin-square bx-flashing'></i></a></li>
+        <li><a href="https://github.com/Pybite" target="_blank""><i class='bx bxl-github bx-flashing' ></i></a></li>
+        <li><a href=" https://x.com/config_err" target="_blank"><i class='bx bxl-twitter bx-flashing'></i></a></li>
+    </ul>
+</div>
 <footer>&copy; Javed M 2024</footer>
+<script defer src="/script.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/yesiamrocks/cssanimation.io@1.0.3/letteranimation.min.js"></script></script>
 </body>
 </html>
 
