--- a/partials/introBody.ejs
+++ b/partials/introBody.ejs
@@ -1,14 +1,30 @@
-<h4>Welcome 👋🏾,</h4>
-<p class="intro-body-info">Ive learnt alot && would like to show you <br>
-    my journey into web development
+<h4 class="cssanimation leFadeIn random">Welcome,</h4>
+<p class="intro-body-info"><span class="cssanimation leFadeInRight random">Ive learnt alot and would like to show
+    </span><br>
+    <span class="cssanimation leFadeInRight random">you my journey into web development</span>
 </p>
-<div class="image-container">
-    <img src="./img/img2.png" alt="photo of coder" width="350px" height="350px">
+<div class="about-me-container">
+    <h1 class="about-me-header">About Me</h1>
+    <div class="about-me-section-body">
+        <span class="about-bio">Focued self-taught individual with a passion for learning. Always excited to create <br>
+            and learn something new. Focused maily in backend development, ive learnt to utilize <br>
+            frameworks/libraries such as: Flask & Express JS to create complex/secure APIs. I've also gained <br>
+            knowledge on creating and maintaining relational/non relational databases such as: <br> MongoDB and
+            PostgreSQL.
+        </span>
+
+        <ul class="about-me-icons">
+            <li><img src="./img/aboutIcons/html-5.png" alt="HTML5" width="35px" height="35px"></li>
+            <li><img src="./img/aboutIcons/css-3.png" alt="CSS" width="35px" height="35px"></li>
+            <li><img src="./img/aboutIcons/nodejs.png" alt="Node JS" width="35px" height="35px"></li>
+            <li><img src="./img/aboutIcons/js.png" alt="JavaScript" width="35px" height="35px"></li>
+            <li><img src="./img/aboutIcons/python.png" alt="Python" width="35px" height="35px"></li>
+            <li><img src="./img/aboutIcons/postgresql.png" alt="PostgreSQL" width="35px" height="35px"></li>
+            <li><img src="./img/aboutIcons/mongodb.png" alt="MongoDB" width="25px" height="40px"></li>
+        </ul>
+
+    </div>
 </div>
-<ul class="personal-links">
-    <li><a href="https://www.linkedin.com/in/javed-muckett-6907b0a5/" target="_blank"><i class='bx bxl-linkedin-square bx-flashing'></i></a></li>
-    <li><a href="https://github.com/Pybite" target="_blank""><i class='bx bxl-github bx-flashing' ></i></a></li>
-    <li><a href="https://x.com/config_err" target="_blank"><i class='bx bxl-twitter bx-flashing' ></i></a></li>
-</ul>
-
-
+<div class="image-container">
+    <img src="./img/img2.png" alt="photo of coder" width="550px" height="550px">
+</div>
