--- a/partials/header.ejs
+++ b/partials/header.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://cdn.jsdelivr.net/gh/yesiamrocks/cssanimation.io@1.0.3/cssanimation.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/style.css">
     <title>
         <%= title %>
@@ -14,7 +15,6 @@
     <h1>JM</h1>
     <ul class="nav-list">
         <li><a href="/">Home</a></li>
-        <li><a href="/profile">About</a></li>
         <li><a href="/projects">Projects</a></li>
         <li><a href="/contact">Contact</a></li>
 
